# cvQTcameraGL

./: CMakeLists.txt  README.md
include/: widget.h
shader/: toonf2.frag  toonf2.vert
shader/shader_AA/: pass_1.fs  pass_2.fs  pass_3.fs  pass_final.fs
shader/shader_AB/: pass_1.fs  pass_2.fs  pass_3.fs
shader/shader_BA/: pass_1.fs  pass_2.fs  pass_3.fs  pass_final.fs
shader/shader_BB/: pass_1.fs  pass_2.fs
src/: main.cpp  textfile.cpp  widget.cpp  widget_notworking.cpp
